# Edge-AI-Vision-Pipeline-Optimization

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yml  compose.yml.example
Src/: main.cpp
